<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:background="#FFFFFF"> <!-- Fond blanc -->

    <!-- Texte de confirmation -->
    <TextView
        android:id="@+id/textConfirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="#000000"
        android:gravity="center"
        android:text="@string/confirmation_title"/>

    <!-- Bouton OK -->
    <Button
        android:id="@+id/btn_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:layout_marginTop="16dp"
        android:backgroundTint="?attr/colorPrimary"
        android:textColor="#FFFFFF"/>

    <!-- Bouton Retour -->
    <Button
        android:id="@+id/btn_retour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/retour"
        android:layout_marginTop="8dp"
        android:backgroundTint="?attr/colorAccent"
        android:textColor="#FFFFFF"/>

    <!-- Bouton Imprimer en PDF -->
    <Button
        android:id="@+id/btn_imprimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/imprimer_pdf"
        android:layout_marginTop="8dp"
        android:backgroundTint="?attr/colorPrimaryDark"
        android:textColor="#FFFFFF"/>
</LinearLayout>
