<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F9FA"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/btn_menu"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#673AB7"
            android:text="☰"
            android:textColor="#000000"
            android:textSize="16sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="346dp"
            android:layout_height="632dp"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="345dp"
                android:layout_height="640dp">

                <LinearLayout
                    android:id="@+id/linearLayout1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/circle"
                        android:padding="10dp"
                        android:src="@drawable/img_register"
                        app:tint="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="20dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/confirmation_message"
                        android:textColor="@color/white"
                        android:textSize="22sp" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_below="@+id/linearLayout1"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="-10dp"
                    android:rotation="45"
                    android:src="@drawable/square" />

                <RelativeLayout
                    android:id="@+id/relativeLayout1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imageView1"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="30dp">

                    <ImageView
                        android:id="@+id/imgView_userIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@color/colorPrimary"
                        android:padding="8dp"
                        android:src="@drawable/img_authentication"
                        app:tint="@color/white" />

                    <EditText
                        android:id="@+id/input_nom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/imgView_userIcon"
                        android:layout_alignParentTop="true"
                        android:layout_toRightOf="@+id/imgView_userIcon"
                        android:background="@color/editTextBG"
                        android:hint="@string/label_nom"
                        android:focusable="false"
                        android:clickable="false"
                        android:longClickable="false"
                        android:paddingLeft="20dp"
                        android:textSize="15sp" />

                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/relativeLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/relativeLayout1"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="30dp">

                    <ImageView
                        android:id="@+id/imgView_passwordIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@color/colorPrimary"
                        android:padding="8dp"
                        android:src="@drawable/img_authentication"
                        app:tint="@color/white" />

                    <EditText
                        android:id="@+id/input_prenom"
                        android:layout_width="match_parent"
                        android:focusable="false"
                        android:clickable="false"
                        android:longClickable="false"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/imgView_passwordIcon"
                        android:layout_alignParentTop="true"
                        android:layout_toRightOf="@+id/imgView_passwordIcon"
                        android:background="@color/editTextBG"
                        android:hint="@string/label_prenom"
                        android:paddingLeft="20dp"
                        android:textSize="15sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/relativeLayout3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/relativeLayout2"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="30dp">

                    <ImageView
                        android:id="@+id/imgView_repasswordIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@color/colorPrimary"
                        android:padding="8dp"
                        android:src="@drawable/age_group"
                        app:tint="@color/white" />

                    <EditText
                        android:id="@+id/input_age"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:clickable="false"
                        android:longClickable="false"
                        android:layout_alignBottom="@+id/imgView_repasswordIcon"
                        android:layout_alignParentTop="true"
                        android:layout_toRightOf="@+id/imgView_repasswordIcon"
                        android:background="@color/editTextBG"
                        android:hint="@string/hint_age"
                        android:inputType="number"
                        android:paddingLeft="20dp"
                        android:textSize="15sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/relativeLayout4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/relativeLayout3"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="30dp">

                    <ImageView
                        android:id="@+id/imgView_emailIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@color/colorPrimary"
                        android:padding="8dp"
                        android:src="@drawable/skill"
                        app:tint="@color/white" />

                    <EditText
                        android:id="@+id/spinner_domaine"
                        android:focusable="false"
                        android:clickable="false"
                        android:longClickable="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/imgView_emailIcon"
                        android:layout_alignParentTop="true"
                        android:layout_toRightOf="@+id/imgView_emailIcon"
                        android:background="@color/editTextBG"
                        android:hint="@string/label_domaine"
                        android:paddingLeft="20dp"
                        android:textSize="15sp" />


                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/relativeLayout5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/relativeLayout4"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="30dp">

                    <ImageView
                        android:id="@+id/imgView_emailIcon1"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@color/colorPrimary"
                        android:padding="8dp"
                        android:src="@drawable/country"
                        app:tint="@color/white" />

                    <EditText
                        android:id="@+id/spinner_pays"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:clickable="false"
                        android:longClickable="false"
                        android:layout_alignBottom="@+id/imgView_emailIcon1"
                        android:layout_alignParentTop="true"
                        android:layout_toRightOf="@+id/imgView_emailIcon1"
                        android:background="@color/editTextBG"
                        android:hint="@string/label_pays"
                        android:paddingLeft="20dp"
                        android:textSize="15sp" />


                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/relativeLayout6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/relativeLayout5"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="30dp">

                    <EditText
                        android:id="@+id/input_telephone"
                        android:layout_width="154dp"
                        android:focusable="false"
                        android:clickable="false"
                        android:longClickable="false"
                        android:layout_height="match_parent"
                        android:layout_alignBottom="@+id/imgView_emailIcon2"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="87dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginBottom="0dp"
                        android:layout_toRightOf="@+id/imgView_emailIcon2"
                        android:background="@color/editTextBG"
                        android:hint="@string/label_telephone"
                        android:paddingLeft="20dp"
                        android:textSize="15sp" />

                    <ImageView
                        android:id="@+id/imgView_emailIcon2"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@color/colorPrimary"
                        android:padding="8dp"
                        android:src="@drawable/ic_phone"
                        app:tint="@color/white" />

                    <EditText
                        android:id="@+id/input_code_pays"
                        android:layout_width="77dp"
                        android:layout_height="39dp"
                        android:focusable="false"
                        android:clickable="false"
                        android:longClickable="false"
                        android:layout_alignBottom="@+id/imgView_emailIcon2"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="1dp"
                        android:layout_toRightOf="@+id/imgView_emailIcon2"
                        android:background="@color/editTextBG"
                        android:hint="@string/label_code_pays"
                        android:paddingLeft="20dp"
                        android:textSize="15sp" />


                </RelativeLayout>


                <LinearLayout
                    android:id="@+id/buttonContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/relativeLayout6"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="30dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_ok"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp"
                        android:layout_weight="1"
                        android:background="@color/colorPrimary"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/ok"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/btn_imprimer"
                        android:layout_width="137dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/colorPrimary"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/imprimer_pdf"
                        android:textColor="@color/white" />
                </LinearLayout>

                <Button
                    android:id="@+id/btn_retour"
                    android:layout_width="287dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/buttonContainer"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="7dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/retour"
                    android:textColor="#FFFFFF" />

            </RelativeLayout>


        </androidx.cardview.widget.CardView>



    </RelativeLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        app:menu="@menu/menu_drawer" />
</androidx.drawerlayout.widget.DrawerLayout>